<resources>
    <string name="app_name">Virtual Boltcard</string>
    <string name="ad_nfcTurnOn_pos">Turn on</string>
    <string name="ad_nfcTurnOn_neg">Dismiss</string>
    <string name="initial_status_nfc">Waiting for NFC</string>
    <string name="confirm">Confirm</string>
    <string name="edit_text_hint">Input whatever your want</string>
    <string name="enter_valid_data">Please enter valid data</string>
    <string name="servicedesc">servicedesc</string>
    <string name="aiddescription">aiddescription</string>
    <string name="ad_nfcTurnOn_title">NFC is turned off.</string>
    <string name="ad_nfcTurnOn_message">You need turn on NFC module for scanning. Wish turn on it now?</string>
    <string name="tv_noNfc">There is no NFC module on this device</string>
    <string name="edit_card_name">Edit Bolt Card</string>
    <string name="card_saved">Card saved</string>
    <string name="finish_import">Card created, you still have to supply UID and counter</string>
    <string name="import_description">Please enter the url created by LNbits and click go</string>
    <string name="create_description">Enter the Url of your LNbits Server and hit \"Go\"</string>
    <string name="finish_lnbits_create">LNbits card created</string>
    <string name="create_card_notification"><b>You do not have setup a card yet.</b>\n Please select from one of the options below.</string>
    <string name="channel_name">VirtualBoltcard Notification</string>
    <string name="channel_description">VirtualBoltcard notification channel</string>
    <string name="hce_notification_title">Virtual Boltcard</string>
    <string name="hce_notification_message">"Boltcard emulation active "</string>
    <string name="lnbits_server_url">LNbits server url</string>
    <string name="lnbits_wallet_and_cardname">LNbits wallet and cardname</string>
    <string name="transaction_limit_in_sats">Transaction limit in sats</string>
    <string name="daily_limit_in_sats">Daily limit in sats</string>
    <string name="go">Go</string>
    <string name="click_to_open_wallet">Click to open Wallet</string>
    <string name="click_here_to_open_wallet">Click here to open Wallet</string>
    <string name="funding_click_or_scan">Funding (click or scan)</string>
    <string name="lnbits_card_data_url">LNbits card-data url</string>
    <string name="name">Name</string>
    <string name="uid">UID</string>
    <string name="counter">Counter</string>
    <string name="lnurl_template">LNURL-Template</string>
    <string name="key_1">Key 1</string>
    <string name="key_2">Key 2</string>
    <string name="default_tx_limit">100000</string>
    <string name="lnbits_default_url">https://lnbits.bolt-ring.com</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="enable_pin">Enable PIN</string>
    <string name="settings_header">Settings</string>
    <string name="enable_hce_service">Enable Boltcard Service</string>
    <string name="WalletUrl">Wallet Url</string>
    <string name="FundingUrl">Funding Url</string>
    <string name="Apikey">Apikey</string>
    <string name="InvoiceKey">Invoice Key</string>

</resources>
