<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory-->

    <PreferenceCategory app:title="@string/settings_header">

        <SwitchPreferenceCompat
            app:key="enable_hce_service"
            app:title="@string/enable_hce_service" />
        <SwitchPreferenceCompat
            app:key="enable_pin"
            app:title="@string/enable_pin" />

    </PreferenceCategory>

</PreferenceScreen>