<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.bitcoin_ring.virtualboltcard.CardSetupManualActivity"
        android:background="#5d7e81">
    <EditText
            style="@style/DarkEditText"
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:maxLength="40"
            android:textColorHint="#a0a0a0"
            android:textColor="#ffffff"
            android:hint="@string/name"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    <EditText
            android:id="@+id/editUID"
            style="@style/DarkEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10sp"
            android:textColorHint="#a0a0a0"
            android:textColor="#ffffff"
            android:layout_marginEnd="20dp"
            android:digits="0123456789ABCDEFabcdef"
            android:maxLength="14"
            android:hint="@string/uid"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editName" />
    <EditText
            android:id="@+id/editCounter"
            style="@style/DarkEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20sp"
            android:textColorHint="#a0a0a0"
            android:textColor="#ffffff"
            android:inputType="number"
            android:hint="@string/counter"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editUID" />

    <EditText
            style="@style/DarkEditText"
            android:id="@+id/editURL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20sp"
            android:textColorHint="#a0a0a0"
            android:textColor="#ffffff"
            android:hint="@string/lnurl_template"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editCounter" />

    <EditText
            style="@style/DarkEditText"
            android:id="@+id/editK1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20sp"
            android:textColorHint="#a0a0a0"
            android:textColor="#ffffff"
            android:digits="0123456789ABCDEFabcdef"
            android:maxLength="32"
            android:hint="@string/key_1"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editURL" />

    <EditText
            style="@style/DarkEditText"
            android:id="@+id/editK2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20sp"
            android:textColorHint="#a0a0a0"
            android:textColor="#ffffff"
            android:digits="0123456789ABCDEFabcdef"
            android:maxLength="32"
            android:hint="@string/key_2"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editK1" />

    <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginBottom="20sp"
            android:textColorHint="#a0a0a0"
            android:textColor="#ffffff"
            android:text="@string/confirm"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/editK2"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8sp"
            android:layout_marginTop="8sp"
            android:layout_marginEnd="8sp"
            android:textColor="#ffffff"
            android:textColorHint="#a0a0a0"
            android:layout_marginBottom="8sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>