<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".cardSetup.CardSetupLNbitsImport"
        android:background="#5d7e81">
    <ImageView
        android:id="@+id/importimage"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:layout_margin="0sp"
        android:scaleType="fitEnd"
        android:background="@color/colorPrimaryDark"
        app:srcCompat="@drawable/virtualboltcard_lnbits_import"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/importdescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/import_description"
            android:textColor="#ffffff"
            android:textColorHint="#a0a0a0"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/editLNbitsUrl"
            app:layout_constraintTop_toBottomOf="@+id/importimage" />

    <EditText
            android:id="@+id/editLNbitsUrl"
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/lnbits_card_data_url"
            android:ems="10"
            android:textColorHint="#a0a0a0"
            android:textColor="#ffffff"
            android:inputType="textUri"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/importlnbits"
            app:layout_constraintTop_toBottomOf="@+id/importdescription" />

    <Button
            android:id="@+id/importlnbits"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go"
            android:textColorHint="#a0a0a0"
            android:textColor="#ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/editLNbitsUrl"
            app:layout_constraintBottom_toBottomOf="@id/editLNbitsUrl" />

    <FrameLayout
            android:id="@+id/scanner_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/importlnbits"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
             />
</androidx.constraintlayout.widget.ConstraintLayout>