<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.AdditionalDataLNbitsFragment"
        >
    <ProgressBar
            android:id="@+id/loadingSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:indeterminateTint="@color/colorPrimaryDark"
            />
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contentLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/topGuide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0" />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/middleGuide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/bottomGuide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.9" />

        <TextView
                android:id="@+id/balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_to_open_wallet"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/topGuide"
                tools:visibility="visible" />

        <TextView
                android:id="@+id/wallet_qr_code_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_here_to_open_wallet"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/balance"
                tools:visibility="visible" />

        <ImageView
                android:id="@+id/funding_qr_code"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="gone"
                android:scaleType="fitCenter"
                android:layout_marginLeft="50sp"
                android:layout_marginRight="50sp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/wallet_qr_code_label"
                app:layout_constraintBottom_toTopOf="@+id/middleGuide"
                tools:visibility="visible" />

        <TextView
                android:id="@+id/funding_qr_code_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/funding_click_or_scan"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/funding_qr_code"
                tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
